fix: fix select options background in dark mode (fix #32)

--- a/assets/styles/panels.css
+++ b/assets/styles/panels.css
@@ -313,6 +313,10 @@
     color: inherit;
   }
 
+  select option {
+    background-color: var(--gjs-components-background);
+  }
+
   .gjs-field.gjs-field-color {
     display: flex;
     overflow: hidden;
